deployment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: mikro-ingress
  labels:
    app: mikro
spec:
  rules:
    - host: "viewer.kaart.com"
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /data/(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /api/v1/(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
  tls:
    - hosts:
        - "viewer.kaart.com"
      secretName: viewer-ingress-cert
